Updated style rules and DOM elements to be compatible with IE/Edge and have correct colorization. Also changed CSS rules and added fallbacks for color changing icons on mobile tabs, should gracefully degrade to gray icons on all unsupported platforms

--- a/assets/stylesheets/apt-crowd.scss
+++ b/assets/stylesheets/apt-crowd.scss
@@ -10,12 +10,12 @@ div.bootbox.modal {
     height: 100%;
     max-height: 100%;
   }
-  .modal-footer {
-    padding: 0;
-    right: 0;
-    position: absolute;
+  .modal-footer a {
+    height: 1.8em;
+    position: fixed;
     top: 0;
-    z-index: 999;
+    right: 0;
+    z-index: 4;
   }
 }
 .tabbed-container {
@@ -23,13 +23,14 @@ div.bootbox.modal {
     box-sizing: border-box;
   }
   overflow: hidden;
-  background-color: lightgray;
+  background-color: #F2F2F2;
   position:relative;
   font-family: sans-serif;
   height: 100%;
   .ac-header {
+    padding-left: 2em;
     background-color: #fff;
-    box-shadow: 0px 3px 10px gray;
+    box-shadow: 0px 3px 10px #808080;
     margin: 0;
     background-color: white;
     z-index: 3;
@@ -38,7 +39,7 @@ div.bootbox.modal {
     white-space: nowrap;
     height: 2.5em;
     h1 {
-      font-size: 75%;
+      font-size: 80%;
       line-height: 3.5em;
       color: #000;
       text-align: left;
@@ -52,16 +53,15 @@ div.bootbox.modal {
     z-index: 2;
     padding: 0;
     height: 2.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: calc(100% / 3);
+    line-height: 2.5em;
+    display: block;
+    width: 33%;
     float: left;
-    background-color: lightblue;
+    background-color: #4DB4E3;
     font-family: sans-serif;
     text-align: center;
     position: relative;
-    color: #000;;
+    color: #808080;
     font-size: 200%;
     font-weight: bold;
     pointer-events: all;
@@ -79,10 +79,44 @@ div.bootbox.modal {
       bottom: -1em;
       left: 0;
       margin: 0 auto;
-      background-color: lightgray;
+      background-color: #F2F2F2;
     }
-    img {
-      height: 80%;
+    span.ac-icon {
+      display: inline-block;
+      height: 100%;
+      width: 100%;
+      margin-right: 0.2em;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: #fff;
+      &.posts {
+        -webkit-mask:  url('/images/ac-bubble.svg') no-repeat center;
+        -webkit-mask-size: 1.5em;
+        mask: url('/images/ac-bubble.svg') no-repeat center;
+        mask-size: 1.5em;
+      }
+      &.posts.fallback {
+        background-image: url('/images/ac-bubble.png');
+      }      
+      &.peers {
+        -webkit-mask:  url('/images/ac-avatar.svg') no-repeat center;
+        -webkit-mask-size: 1.5em;
+        mask: url('/images/ac-avatar.svg') no-repeat center;
+        mask-size: 1.5em;
+      }
+      &.peers.fallback {
+        background-image: url('/images/ac-avatar.png');
+      }
+      &.partners {
+        -webkit-mask:  url('/images/ac-globe.svg') no-repeat  center;
+        -webkit-mask-size: 1.5em;
+        mask: url('/images/ac-globe.svg') no-repeat center;
+        mask-size: 1.5em;
+      }
+      &.partners.fallback {
+        background-image: url('/images/ac-globe.png');
+      }
     }
   }
   .results-container {
@@ -99,18 +133,24 @@ div.bootbox.modal {
       left: 0;
       transition: all 250ms ease;
       [class^="results-"] {
-        display: flex;
-        flex-direction: column;
-        width: calc(100% / 3);
+        display: block;
+        width: 33%;
         height: 100%;
         overflow-y: scroll;
         float: left;
         .result {
-          display: inline-block;
+          display: block;
           padding: 16px;
           background-color: white;
           border-radius: 5px;
           margin: 16px;
+          img {
+            max-width: 100%;
+          }
+          a.btn-primary {
+            background-color: #4DB4E3;
+            margin-bottom: 0.5em;
+          }
         }
       }
     }
@@ -118,9 +158,13 @@ div.bootbox.modal {
   input:checked + input + input + label,
   input + input:checked + input + label + label,
   input + input + input:checked + label + label + label {
-    //border: 2px solid lightblue;
-    background-color: lightgray;
-    color: black;
+    background-color: #F2F2F2;
+    color: #000;
+  }
+  input:checked + input + input + label > span.ac-icon.posts,
+  input + input:checked + input + label + label > span.ac-icon.peers,
+  input + input + input:checked + label + label + label > span.ac-icon.partners {
+    background-color: #808080 !important;
   }
   input:checked + input + input + label + label + label + .results-container > .results {
     left: 0;
@@ -132,7 +176,7 @@ div.bootbox.modal {
     left: -200%;
   }
 }
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 800px) {
   div.bootbox.modal {
     width: 80%;
     height: 600px;
@@ -143,6 +187,7 @@ div.bootbox.modal {
   .tabbed-container {
     .ac-header{
         h1 {
+          padding-left: 0;
           font-size: 1.6em;
           text-align: center;
           line-height: 1.6em;
@@ -150,27 +195,54 @@ div.bootbox.modal {
       }
     label[for^="tab-"] {
       height: 1.5em;
-      justify-content: flex-start;
+      line-height: 1.5em;
+      text-align: left;
       padding: 0 0 0 1em;
-      background-color: lightgray;
-      color: #000;;
+      background-color: #F2F2F2;
+      color: #808080;
       font-size: 200%;
       font-weight: bold;
       pointer-events: none;
       span {
-        display: initial;
+        display: inline;
       }
-      img {
+      span.ac-icon {
         height: 50%;
+        width: 1em;
         padding-right: 0.25em;
+        &.posts {
+          background-image: url('/images/ac-bubble.svg');
+          -webkit-mask-size: contain;
+          mask-size: contain;
+        }
+        &.posts.fallback {
+          background-image: url('/images/ac-bubble.png');
+        }      
+        &.peers {
+          background-image: url('/images/ac-avatar.svg');
+          -webkit-mask-size: contain;
+          mask-size: contain;
+        }
+        &.peers.fallback {
+          background-image: url('/images/ac-avatar.png');
+          
+        }
+        &.partners {
+          background-image: url('/images/ac-globe.svg');
+          -webkit-mask-size: contain;
+          mask-size: contain;
+        }
+        &.partners.fallback {
+          background-image: url('/images/ac-globe.png');
+        }
       }
     }
     input:checked + input + input + label,
     input + input:checked + input + label + label,
     input + input + input:checked + label + label + label {
       border: none;
-      background-color: lightgray;
-      color: #000;;
+      background-color: #F2F2F2;
+      color: #808080;
     }
     input:checked + input + input + label + label + label + .results-container > .results,
     input + input:checked + input + label + label + label + .results-container > .results,
@@ -178,7 +250,7 @@ div.bootbox.modal {
       left: 0;
     }
     .results-container {
-      overflow: scroll;
+      overflow-y: scroll;
       .results {
         height: 100%;
         width: 100%;
